bug/starfield-bleed-portrait another bottom banner fix

--- a/src/index.css
+++ b/src/index.css
@@ -5,21 +5,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html {
-  background: #000510;
-}
-
 html, body {
   margin: 0;
   padding: 0;
+  background-color: #0a0e1a;
   width: 100%;
   height: 100%;
   overflow: hidden;
-}
-
-body {
-  background-color: #000510;
-  background-image: radial-gradient(ellipse at 20% 50%, #0d1b2a 0%, #0a0e1a 60%, #000510 100%);
 }
 
 input[type=number]::-webkit-inner-spin-button,
